--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,13 +7,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <a class="navbar-brand" href="#" style="max-width:100px; margin-top: -7px;"><%= image_tag 'def1_logo.png', size: '250x35' %></a>
         
-        <%= link_to site_name, site_url, :class => "navbar-brand" %>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right">
-          <li class="<%= 'active' if current_page?(home_path) %>"><%= link_to "Home", home_path %></li>
-          <li class="<%= 'active' if current_page?(contact_path) %>"><%= link_to "Contact", contact_path %></li>
+        	<% menus.each do |key, val| %>
+        		<li class="<%= 'active' if current_page?(val) %>"><%= link_to "#{key.capitalize}", val %></li>
+        	<% end %>
+          
         </ul>
       </div><!-- /.nav-collapse -->
     </div><!-- /.container -->
